@@ -1,8 +1,6 @@
 AUX fix-location-qt4-gentoo_configure.in.patch 1472 RMD160 79958bf6b1bb28d6b0347e89f765e6a6d4cd67f0 SHA1 486e2aa839ca8759655822199430fa175850a882 SHA256 62854804aa9494f402b0fd1ef52d13c69366964692bc40b6423ffcb030eb1582
 AUX oscada.init 448 RMD160 5c6e3bf8a758273bab2978d589ea032b2eb8196f SHA1 1897fca39a4da45208b520b8dcfaf4ea780cc084 SHA256 5d4b2ed4e3f6c5a2969df2f9cd28972c1c9ac52569c9cd70c456c81e24feaec0
-DIST openscada-0.6.4.1.tar.gz 64056188 RMD160 955cc20331869d1533a4a6314b558e74c9ecc5f1 SHA1 03f8472e86cf70d9ec91f7eccc476e1d2d1814ed SHA256 65920c8de0d251e8779eb5fa4aa6244ecad6167f598fa51c47fcdb165a600ce3
 DIST openscada-0.6.4.2.tar.gz 75195027 RMD160 38149b07a05eace9233bffe83168e473fafcaf4f SHA1 b8d11dbb3fd8c88c1b99c73bf33d8547dcbf0a0b SHA256 c3093e8393ee626df18e2b9c2a302b11da59351ce2576b38cc9e337b54261d19
-EBUILD openscada-0.6.4.1.ebuild 4665 RMD160 c342a512f0d35ac40d5aef312bcda937963ed6b0 SHA1 d05222d6dc051feff428419c74f637edd216faaf SHA256 a7fd48031c3282af8dd580cb2c7a4f8efb7c8d4cbe16866056da36de98f70028
 EBUILD openscada-0.6.4.2.ebuild 4665 RMD160 c342a512f0d35ac40d5aef312bcda937963ed6b0 SHA1 d05222d6dc051feff428419c74f637edd216faaf SHA256 a7fd48031c3282af8dd580cb2c7a4f8efb7c8d4cbe16866056da36de98f70028
-MISC ChangeLog 662 RMD160 e75d70ba520981f3225419b1222ac906879ce020 SHA1 231aeb425766d0420f04d09f7bc56d54ed5d4db5 SHA256 82a1eab4e5c226e75730cc81bcbc956dc4556802c0122cd9635e71ea62fbd874
+MISC ChangeLog 753 RMD160 134ed6156d6a4cb0336b4630564e4363bd785dcd SHA1 cb37780ba94e7a0eb0b56dbecdaacc97c6419bea SHA256 bd82cd2df7d95b8d915cd10905eaec16ea16746b60fd0a03aa8fe9af502fd7f1
 MISC metadata.xml 1289 RMD160 cf03fad2b8427ec03201e1119e0d773540dba6eb SHA1 c3c9aab40a2af37d34202440af45d17d9cc03e7e SHA256 c600d9022e7828e48207e9408d015e0ebe3b2a273e32575e91afe1047749f396
