@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -openscada-0.6.4.1.ebuild:
+  remov
+
 *openscada-0.6.4.2 (08 Jul 2010)
 
   08 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
